<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:fontFamily="@font/syncopate"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/syncopate"
        android:text="@string/last"
        android:textAlignment="center"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/syncopate"
        android:text="@string/assassin"
        android:textAlignment="center"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/createGameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorBlack"
        android:fontFamily="@font/syncopate"
        android:onClick="displayCreateGame"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:text="@string/createGame"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/joinGameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorBlack"
        android:fontFamily="@font/syncopate"
        android:onClick="displayJoinGame"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:text="@string/joinGame"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/createGameBtn"
        app:layout_constraintStart_toStartOf="@+id/createGameBtn"
        app:layout_constraintTop_toBottomOf="@+id/createGameBtn" />

    <Button
        android:id="@+id/tutorialBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlack"
        android:fontFamily="@font/syncopate"
        android:onClick="showTutorial"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:text="@string/tutorial"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/lastAssassinLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>