<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:screenOrientation="portrait"
    android:fontFamily="@font/syncopate"
    tools:context=".settingsView">

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorBlack"
        android:fontFamily="@font/syncopate"
        android:onClick="backToLobby"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/save"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorWhiteSmoke"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/syncopate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/syncopate"
        android:text="@string/settings"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/syncopate"
        android:text="@string/gameMode"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/syncopate"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/delay"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/syncopate"
        android:inputType="number"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/colorWhiteSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

</androidx.constraintlayout.widget.ConstraintLayout>